# ALSA-audio-capture

./: .gitignore  CMakeLists.txt
cmake/: setup.cmake
src/: AudioCapture.cpp  AudioCapture.hpp  CMakeLists.txt  InputAudio.cpp  InputAudio.hpp  RingBuffer.cpp  RingBuffer.hpp  main.cpp
